feat(teams): Add team deletion
