# openapi/openapi.yaml
@@ -89,35 +89,6 @@ paths:
           description: Unauthorized
         "409":
           description: Conflict
-    patch:
-      summary: Update a team
-      tags:
-        - Teams
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Team"
-            example:
-              slug: hack-as-a-service
-              name: Hack as a Service
-              avatar: https://doggo.ninja/dzippy.png
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Team"
-        "500":
-          description: Internal server error
-        "401":
-          description: Unauthorized
-        "404":
-          description: Team not found
-        "409":
-          description: Conflict
   /teams/{slug}:
     get:
       summary: Fetch a team
@@ -143,6 +114,65 @@ paths:
           description: Team not found
         "401":
           description: Unauthorized
+    patch:
+      summary: Update a team
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: slug
+          schema:
+            type: string
+          required: true
+          example: hack-as-a-service
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Team"
+            example:
+              slug: hack-as-a-service
+              name: Hack as a Service
+              avatar: https://doggo.ninja/dzippy.png
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Team"
+        "500":
+          description: Internal server error
+        "401":
+          description: Unauthorized
+        "404":
+          description: Team not found
+        "409":
+          description: Conflict
+    delete:
+      summary: Delete a team
+      description: Requires that all apps are first deleted.
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: slug
+          schema:
+            type: string
+          required: true
+          example: hack-as-a-service
+      responses:
+        "204":
+          description: OK
+        "500":
+          description: Internal server error
+        "401":
+          description: Unauthorized
+        "404":
+          description: Team not found
+        "409":
+          description: Conflict (all apps must be deleted)
   /teams/{slug}/users:
     get:
       summary: Fetch a team's users
